--- a/Simulador Maquinas de Turing/Simulador Maquinas de Turing/Properties/Resources.resx
+++ b/Simulador Maquinas de Turing/Simulador Maquinas de Turing/Properties/Resources.resx
@@ -127,4 +127,7 @@
   <data name="circulo_verde" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\circulo-verde.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="robot" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\robot.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
